@@ -7,6 +7,196 @@ This file summarizes the new features and major changes for each *TornadoVM* ver
 
 CHANGELOG
 
+TornadoVM 4.0.1-jdk21
+---------------------
+29/04/26
+
+Compatibility
+~~~~~~~~~~~~
+
+- `#832 <https://github.com/beehive-lab/TornadoVM/pull/832>`_: Adopt jdk21 version suffix on develop and update release workflows 
+- `#827 <https://github.com/beehive-lab/TornadoVM/pull/827>`_: Bump org.apache.logging.log4j:log4j-core from 2.25.3 to 2.25.4
+
+Bug Fixes
+~~~~~~~~~~~~
+
+- `#831 <https://github.com/beehive-lab/TornadoVM/pull/831>`_: [fix] F16 miscompilation for Metal, PTX, SPIR-V backends with JDK 25
+- `#830 <https://github.com/beehive-lab/TornadoVM/pull/830>`_: [fix] Fix F16 miscompilation in PTX and Metal backends
+- `#829 <https://github.com/beehive-lab/TornadoVM/pull/829>`_: [fix] Backport jdk25 OCL plugin fixes: 64-bit address arithmetic, node insertion, and atomics
+
+Other Changes
+~~~~~~~~~~~~
+
+- `#823 <https://github.com/beehive-lab/TornadoVM/pull/823>`_: Update SDKMAN! versions for backend options
+- `#825 <https://github.com/beehive-lab/TornadoVM/pull/825>`_: [feat] Add workflow to automatically create mirroring PRs for JDK25
+- `#824 <https://github.com/beehive-lab/TornadoVM/pull/824>`_: Update master
+
+
+TornadoVM 4.0.0
+---------------
+02/04/26
+
+Improvements
+~~~~~~~~~~~~
+
+- `#811 <https://github.com/beehive-lab/TornadoVM/pull/811>`_: Add support for CUDA Graphs to replay bytecodes to reduce dispatch overhead
+
+Bug Fixes
+~~~~~~~~~~~~
+
+- `#817 <https://github.com/beehive-lab/TornadoVM/pull/817>`_: [hotfix] Fix double-deletion of PiNode when multiple OffsetAddressNodes share the same PiNode
+
+Other Changes
+~~~~~~~~~~~~
+
+- `#813 <https://github.com/beehive-lab/TornadoVM/pull/813>`_: Add SIMD Shuffle/Reduction Support to PTX Backend    
+- `#814 <https://github.com/beehive-lab/TornadoVM/pull/814>`_: [docs] Update readme to inlcude metal
+- `#819 <https://github.com/beehive-lab/TornadoVM/pull/819>`_: Sync master with develop
+- `#818 <https://github.com/beehive-lab/TornadoVM/pull/818>`_: [fix] Make cmake to always set CMAKE_OSX_SYSROOT explicitly, making i…
+- `#796 <https://github.com/beehive-lab/TornadoVM/pull/796>`_: [JDK21] Add \`Apple Metal\` backend  to run natively on Apple Silicon
+- `#808 <https://github.com/beehive-lab/TornadoVM/pull/808>`_: Add TornadoVM developer skill (build, test, debug, Java 21+ idioms) for Claude
+- `#806 <https://github.com/beehive-lab/TornadoVM/pull/806>`_: Release 3.0.0-jdk25
+- `#807 <https://github.com/beehive-lab/TornadoVM/pull/807>`_: Post release minor fixes for mvn deploy and readme budges 
+
+
+TornadoVM 3.0.0
+---------------
+24/02/26
+
+Improvements
+~~~~~~~~~~~~
+
+- `#790 <https://github.com/beehive-lab/TornadoVM/pull/790>`_: [feat] Move --intellijinit from CLI to developer-only Makefile target with dynamic backend selection
+
+Compatibility
+~~~~~~~~~~~~
+
+- `#804 <https://github.com/beehive-lab/TornadoVM/pull/804>`_: Refactor GH actions to split JDK21 and JDK25 testing, packaging and deployment 
+- `#777 <https://github.com/beehive-lab/TornadoVM/pull/777>`_: Bump org.apache.logging.log4j:log4j-core from 2.17.1 to 2.25.3
+- `#775 <https://github.com/beehive-lab/TornadoVM/pull/775>`_: [docs] Revise TornadoVM installation instructions
+- `#776 <https://github.com/beehive-lab/TornadoVM/pull/776>`_: [feat] Add new action to push default tornadovm version
+
+Bug Fixes
+~~~~~~~~~~~~
+
+- `#785 <https://github.com/beehive-lab/TornadoVM/pull/785>`_: [fix] Added scripts in dist directory to resolve issue with intellijinit
+
+Other Changes
+~~~~~~~~~~~~
+
+- `#803 <https://github.com/beehive-lab/TornadoVM/pull/803>`_: Whitelist \`TestInheritedFields\` for non-OpenCL backends
+- `#802 <https://github.com/beehive-lab/TornadoVM/pull/802>`_: [fix] Handle Windows CRLF line endings in virtual device tests and native tests & Update Makefile.mak
+- `#801 <https://github.com/beehive-lab/TornadoVM/pull/801>`_: Add GitHub workflows for JDK 25 build, deployment, and release prepar…
+- `#799 <https://github.com/beehive-lab/TornadoVM/pull/799>`_: Add JDK 25.0.2 release automation workflows
+- `#787 <https://github.com/beehive-lab/TornadoVM/pull/787>`_: [refactor] Prepare compiler and API infrastructure for Jdk25 migration 
+- `#781 <https://github.com/beehive-lab/TornadoVM/pull/781>`_: Fix OCLFieldBuffer to include inherited instance fields
+
+
+TornadoVM 2.2.0
+---------------
+17/12/25
+
+Improvements
+~~~~~~~~~~~~
+
+- `#765 <https://github.com/beehive-lab/TornadoVM/pull/765>`_: Add cross-platform SDK compatibility checks and fix launcher issues
+- `#713 <https://github.com/beehive-lab/TornadoVM/pull/713>`_: [ptx] Support for CUDA JIT compiler flags
+
+Compatibility
+~~~~~~~~~~~~
+
+- `#764 <https://github.com/beehive-lab/TornadoVM/pull/764>`_: [cicd] Prevent workflows from running on forks
+
+Other Changes
+~~~~~~~~~~~~
+
+- `#773 <https://github.com/beehive-lab/TornadoVM/pull/773>`_: [build] Replace TORNADO_SDK with TORNADOVM_HOME 
+- `#772 <https://github.com/beehive-lab/TornadoVM/pull/772>`_: [docs] Refactor license table in README.md for clarity and conciseness
+- `#771 <https://github.com/beehive-lab/TornadoVM/pull/771>`_: [CI] Publish archives to sdkman action
+- `#769 <https://github.com/beehive-lab/TornadoVM/pull/769>`_: Update README.md for TornadoVM version 2.1.0 for SDKs
+
+
+TornadoVM 2.1.0
+---------------
+09/12/25
+
+Improvements
+~~~~~~~~~~~~
+
+- `#754 <https://github.com/beehive-lab/TornadoVM/pull/754>`_: Support to express Q8_0 tensors as Tornado ByteArray
+
+Compatibility
+~~~~~~~~~~~~
+
+- `#756 <https://github.com/beehive-lab/TornadoVM/pull/756>`_: [CI] Add night workflow to build and test all supported JDKs (Zulu, OpenJDK, GraalVM, Corretto, Mandrel etc) on Linux x64 runner
+- `#755 <https://github.com/beehive-lab/TornadoVM/pull/755>`_: [docs] Refining README and simplifying instructions
+
+Bug Fixes
+~~~~~~~~~~~~
+
+- `#753 <https://github.com/beehive-lab/TornadoVM/pull/753>`_: [hotfix] Fix Conversion Error from FP16 to FP32
+
+Other Changes
+~~~~~~~~~~~~
+
+- `#752 <https://github.com/beehive-lab/TornadoVM/pull/752>`_: Update POM files: bump parent version to \`2.0.1-dev\` across all modules
+- `#758 <https://github.com/beehive-lab/TornadoVM/pull/758>`_: [CI] Pre and post release workflows to automate release deployments
+
+
+TornadoVM 2.0.0
+---------------
+02/12/25
+
+Improvements
+~~~~~~~~~~~~
+
+- `#722 <https://github.com/beehive-lab/TornadoVM/pull/722>`_: Simplify running tornadovm with a Java argfile.
+- `#732 <https://github.com/beehive-lab/TornadoVM/pull/732>`_: [types] Support for GPU-native Int8 types for PTX and OpenCL.
+- `#736 <https://github.com/beehive-lab/TornadoVM/pull/736>`_: Implement support for compressed oops (coops).
+- `#738 <https://github.com/beehive-lab/TornadoVM/pull/738>`_: [feat] Update TornadoVM to be packaged as SDK across multiple platforms.
+- `#739 <https://github.com/beehive-lab/TornadoVM/pull/739>`_: [feat] Zero-copy TornadoNativeArray type instances with shallow memory segments.
+- `#740 <https://github.com/beehive-lab/TornadoVM/pull/740>`_: Add support for byte and half-float arrays in local memory across all backends.
+- `#748 <https://github.com/beehive-lab/TornadoVM/pull/748>`_: Support FP32 to FP16 conversion across all backends.
+
+
+Compatibility
+~~~~~~~~~~~~
+
+- `#704 <https://github.com/beehive-lab/TornadoVM/pull/704>`_: Bump org.apache.commons:commons-lang3 from 3.12.0 to 3.18.0 in tornado-benchmark.
+- `#709 <https://github.com/beehive-lab/TornadoVM/pull/709>`_: Fix Python dependency installation issues in installer.
+- `#717 <https://github.com/beehive-lab/TornadoVM/pull/717>`_: [feat] Added streamlit python dependency for compatibility with TornadoViz.
+
+Bug Fixes
+~~~~~~~~~~~~
+
+- `#705 <https://github.com/beehive-lab/TornadoVM/pull/705>`_: [fix] Support for ShortCircuits in OpenCL and PTX.
+- `#706 <https://github.com/beehive-lab/TornadoVM/pull/706>`_: [fix] Codegen support for IntegerBelowNode & Fix of closing bracket in OpenCL.
+- `#712 <https://github.com/beehive-lab/TornadoVM/pull/712>`_: [fix] Fix for Loop Partial Unroll Phase.
+- `#714 <https://github.com/beehive-lab/TornadoVM/pull/714>`_: [fix] The differences CUDA 13 introduced to CUDA API cuCtxCreate.
+- `#721 <https://github.com/beehive-lab/TornadoVM/pull/721>`_: [fix] Integer overflow in TornadoNativeArray implementations that caused IllegalArgumentException when allocating large arrays.
+- `#723 <https://github.com/beehive-lab/TornadoVM/pull/723>`_: [fix] Prevent NullPointerException when trying to dump bytecodes during warm-up.
+- `#746 <https://github.com/beehive-lab/TornadoVM/pull/746>`_: [fix] Remove @ prefix from inline Truffle export flags.
+
+Refactors & Infrastructure
+~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+- `#703 <https://github.com/beehive-lab/TornadoVM/pull/703>`_: Updated build instructions for using a single thread for maven.
+- `#708 <https://github.com/beehive-lab/TornadoVM/pull/708>`_: [test] Mark unsupported tests for SPIRV.
+- `#711 <https://github.com/beehive-lab/TornadoVM/pull/711>`_: Add mvn test configuration to ease unit-testing when porting TornadoVM to third-party projects.
+- `#716 <https://github.com/beehive-lab/TornadoVM/pull/716>`_: [build-infra] Add missing checksums and script to generate checksum files for TornadoVM Maven artifacts.
+- `#720 <https://github.com/beehive-lab/TornadoVM/pull/720>`_: Increase default memory size on device.
+- `#725 <https://github.com/beehive-lab/TornadoVM/pull/725>`_: [refactor] Move Dynamic Reconfiguration to research features
+- `#730 <https://github.com/beehive-lab/TornadoVM/pull/730>`_: [build] Revamp build infrastructure by adding Maven wrapper mvnw.
+- `#733 <https://github.com/beehive-lab/TornadoVM/pull/733>`_: Move argfile generation to python from bash.
+- `#742 <https://github.com/beehive-lab/TornadoVM/pull/742>`_: [CI] Migrate build & test workflows (OpenCL, PTX, SPIR-V) to GitHub Actions for Linux (x64) and macOs(arm64).
+- `#737 <https://github.com/beehive-lab/TornadoVM/pull/737>`_: [tests] Marked Quantization Tests as whitelisted due to NVIDIA driver issues.
+- `#743 <https://github.com/beehive-lab/TornadoVM/pull/743>`_: [build] Use shared export‑list files instead of verbose inline --add-exports in pom.xml.
+- `#744 <https://github.com/beehive-lab/TornadoVM/pull/744>`_: Add licences in pom files - prep work for migrating release to maven central.
+- `#745 <https://github.com/beehive-lab/TornadoVM/pull/745>`_: [deploy] Add release profile in maven to prepare maven central release.
+- `#747 <https://github.com/beehive-lab/TornadoVM/pull/747>`_: [CI] Add deploy-maven-central workflow for deploying artifacts to Maven central.
+- `#749 <https://github.com/beehive-lab/TornadoVM/pull/749>`_: [CI] Add GPG key configuration and Maven settings to deploy-maven-central.
+
+
 TornadoVM 1.1.1
 ---------------
 07/07/25
